--- a/themes/movim/css/style.css
+++ b/themes/movim/css/style.css
@@ -275,7 +275,6 @@ ul.clean li {
     right: 0;
     padding-top: 0em;
     height: 100%;
-    overflow: hidden;
     z-index: 2;
     background-color: rgba(36, 36, 36, 1);
 }
